--- a/www/index.html
+++ b/www/index.html
@@ -9,12 +9,13 @@
 
   <link ios-href="build/css/app.ios.css" rel="stylesheet">
   <link md-href="build/css/app.md.css" rel="stylesheet">
-  <link wp-href="build/css/app.wp.css" rel="stylesheet">  
+  <link wp-href="build/css/app.wp.css" rel="stylesheet">
 </head>
 <body>
 
   <ion-app></ion-app>
-
+  <!-- google map -->
+  <script src="http://maps.google.com/maps/api/js"></script>
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
   <!-- Polyfill needed for platforms without Promise and Collection support -->
